# telegram-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-image.yml
bot/: __init__.py  client.py  config.py  handlers.py  main.py  texts.py
bot/handlers/: __init__.py  convert.py  link.py  start.py  status.py  unlink.py
bot/services/: __init__.py
bot/states/: __init__.py
